Agregar comandos principales

--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 <body>
 
 	<h1>Introducción a Git</h1>
+
+	<h3>Comando básicos</h3>
+
+	<ul>
+		<li><b>git init:</b> Inicializa un repositorio</li>
+		<li><b>git status: </b>Verifica el estado de los archivos</li>
+		<li><b>git pull: </b>Obtiene los archivos de GitHub</li>
+		<li><b>git add: </b>Agrega los archivos a la staging area</li>
+		<li><b>git commit: </b>Guarda los archivos en el repostorio local</li>
+		<li><b>git push: </b>Manda los archivos a GitHub</li>
+		<li><b>git log: </b>Muestra el historial del commits</li>
+		<li><b>git diff: </b>Muestra los cambios del archivo</li>
+	</ul>
 </body>
 </html>
