Agrega comandos de branching

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 		<li><b>git diff: </b>Muestra los cambios del archivo</li>
 	</ul>
 
-	
+	<h3>Git Branching</h3>
+
+	<ul>
+		<li><b>git branch: </b>Muestra todas las ramas existentes</li>
+		<li><b>git branch name_branch: </b>Crea una rama con el nombre indicado</li>
+		<li><b>git checkout name_branch: </b>Te mueve a la rama indicada</li>
+		<li><b>git merge: </b>Une las ramas</li>
+		<li><b>git branch -d name_branch: </b>Elimina la rama</li>
+	</ul>
 
 
 </body>
